Working on a design

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="src/css/main.css">
   </head>
   <body>
-    <h1>Great to do so</h1>
+    <div class="page">
+      <nav>
+        <div class="super"></div>
+      </nav>
+      <form action="">
+        <div class="search">
+          <input type="text" name="city" id="" placeholder="Search for cities">
+        </div>
+      </form>
+    </div>
+
+
   </body>
 </html>
