--- a/index.html
+++ b/index.html
@@ -4,20 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="src/css/main.css">
+    <link rel="stylesheet" href="src/css/main.css" />
   </head>
   <body>
     <div class="page">
       <nav>
         <div class="super"></div>
       </nav>
-      <form action="">
-        <div class="search">
-          <input type="text" name="city" id="" placeholder="Search for cities">
+      <div class="content">
+        <form action="">
+          <div class="search">
+            <input
+              type="text"
+              name="city"
+              id=""
+              placeholder="Search for cities"
+            />
+          </div>
+        </form>
+        <div class="city">
+          <div class="city-text"></div>
+          <div class="weather-icon"></div>
         </div>
-      </form>
+        <div class="hourly-forecast"></div>
+        <div class="weather-details"></div>
+      </div>
+      <div class="seven-day">
+        <div class="empty-container"></div>
+        <div class="s-d-forecast"></div>
+      </div>
     </div>
-
-
   </body>
 </html>
