SVG code refactoring

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
     <link rel="stylesheet" href="src/css/main.css" />
-    <link rel="icon" type="image/x-icon" href="icons/umbrella-favicon.png" />
+    <link rel="icon" type="image/x-icon" href="icons/logo/umbrella-favicon.png" />
   </head>
   <body>
     <div class="page">
       <nav>
         <!-- App Logo -->
         <div class="logo">
-          <img src="icons/umbrella-logo.png" alt="" />
+          <img src="icons/logo/umbrella-logo.png" alt="" />
         </div>
 
         <!-- NAV items -->
@@ -125,7 +125,7 @@
                   height="30px"
                   viewBox="0 0 505.394 505.395"
                 >
-                  <use href="icons/thermometer.svg#therm"></use>
+                  <use href="icons/details.svg#therm"></use>
                 </svg>
                 <p class="grey-classic">Real Feel</p>
               </div>
@@ -143,8 +143,7 @@
                   viewBox="0 0 512 512"
                   fill="#9399a2"
                 >
-                  <use href="icons/wind.svg#wind1"></use>
-                  <use href="icons/wind.svg#wind2"></use>
+                  <use href="icons/details.svg#wind"></use>
                 </svg>
                 <p class="grey-classic">Wind</p>
               </div>
@@ -162,7 +161,7 @@
                   viewBox="0 0 488.85 488.85"
                   fill="#9399a2"
                 >
-                  <use href="icons/eye.svg#eye"></use>
+                  <use href="icons/details.svg#eye"></use>
                 </svg>
                 <p class="grey-classic">Visibility</p>
               </div>
@@ -180,7 +179,7 @@
                   viewBox="0 0 264.564 264.564"
                   fill="#9399a2"
                 >
-                  <use href="icons/water.svg#drop"></use>
+                  <use href="icons/details.svg#water"></use>
                 </svg>
                 <p class="grey-classic">Chance of rain</p>
               </div>
@@ -198,7 +197,7 @@
                   viewBox="0 0 457.32 457.32"
                   fill="#9399a2"
                 >
-                  <use href="icons/sun.svg#sun"></use>
+                  <use href="icons/details.svg#sun"></use>
                 </svg>
                 <p class="grey-classic">UV index</p>
               </div>
@@ -216,7 +215,7 @@
                   viewBox="-1.147 -22.185 141.732 141.732"
                   fill="#9399a2"
                 >
-                  <use href="icons/cloudy.svg#cloud-sun"></use>
+                  <use href="icons/details.svg#cloud-sun"></use>
                 </svg>
                 <p class="grey-classic">Sunset</p>
               </div>
