Integrating API with the UI

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       type="image/x-icon"
       href="icons/logo/umbrella-favicon.png"
     />
+    <script defer src="src/js/controller.js" type="module"></script>
   </head>
   <body>
     <div class="page">
