Added animation only to a part of a div that will change

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <p class="hourly-text">7-DAY FORECAST</p>
           </div>
           <ul class="s-d-list">
-            <!-- first day -->
+            <!-- 1st day -->
             <li class="s-d-item">
               <p class="regular-light-text weekday">Today</p>
               <div class="s-d-icon-condition">
@@ -254,7 +254,7 @@
                 <div class="regular-light-text">/22</div>
               </div>
             </li>
-            <!-- second day -->
+            <!-- 2nd day -->
             <li class="s-d-item">
               <p class="regular-light-text weekday">Tue</p>
               <div class="s-d-icon-condition">
