Integrated API into view for city component

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
           </div>
         </form>
         <div class="city">
-          <div class="city-text">
+          <!-- <div class="city-text">
             <p class="city-name">Madrid</p>
             <p class="rain-chance">Chance of rain: 0%</p>
           </div>
           <div class="city-temperature">31°</div>
           <div class="weather-icon">
             <img src="icons/26.png" alt="" />
-          </div>
+          </div> -->
         </div>
         <div class="hourly-forecast">
           <p class="hourly-text">TODAY'S FORECAST</p>
