Added support for more weather images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="icons/logo/umbrella-favicon.png"
+      href="img/logo/umbrella-favicon.png"
     />
     <script defer src="src/js/controller.js" type="module"></script>
   </head>
@@ -17,14 +17,14 @@
       <nav>
         <!-- App Logo -->
         <div class="logo">
-          <img src="icons/logo/umbrella-logo.png" alt="" />
+          <img src="img/logo/umbrella-logo.png" alt="" />
         </div>
 
         <!-- NAV items -->
         <!-- 1st item: weather -->
         <div class="n-item-1 n-item--active">
           <svg viewBox="0 -32 576 576">
-            <use href="icons/nav.svg#weather"></use>
+            <use href="img/svg/nav.svg#weather"></use>
           </svg>
           <p class="nav-text">Weather</p>
         </div>
@@ -32,7 +32,7 @@
         <!-- 2nd item: cities  -->
         <div class="n-item-2">
           <svg viewBox="0 0 460.054 460.054">
-            <use href="icons/nav.svg#options"></use>
+            <use href="img/svg/nav.svg#options"></use>
           </svg>
           <p class="nav-text">Cities</p>
         </div>
@@ -40,7 +40,7 @@
         <!-- 3rd item: map -->
         <div class="n-item-3">
           <svg viewBox="0 0 576 512">
-            <use href="icons/nav.svg#map"></use>
+            <use href="img/svg/nav.svg#map"></use>
           </svg>
           <p class="nav-text">Map</p>
         </div>
@@ -48,7 +48,7 @@
         <!-- 4th item: settings -->
         <div class="n-item-4">
           <svg viewBox="0 0 32 32">
-            <use href="icons/nav.svg#settings"></use>
+            <use href="img/svg/nav.svg#settings"></use>
           </svg>
           <p class="nav-text">Settings</p>
         </div>
@@ -80,7 +80,7 @@
           <p class="hourly-text">TODAY'S FORECAST</p>
           <div class="hourly-content">
             <ul>
-              <li class="h-item">
+              <!-- <li class="h-item">
                 <div class="h-time">6:00 AM</div>
                 <img src="icons/35.png" alt="" />
                 <div class="h-temp">25°</div>
@@ -109,7 +109,7 @@
                 <div class="h-time">9:00 PM</div>
                 <img src="icons/27.png" alt="" />
                 <div class="h-temp">30°</div>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
@@ -122,7 +122,7 @@
           </div>
           <div class="d-details">
             <!-- 1st detail: real feel -->
-            <div class="d-h-item-1 real-feel">
+            <!-- <div class="d-h-item-1 real-feel">
               <div class="icon-text">
                 <svg
                   fill="#9399a2"
@@ -140,7 +140,7 @@
             </div>
 
             <!-- 2nd detail: wind -->
-            <div class="d-h-item-1 wind">
+            <!-- <div class="d-h-item-1 wind">
               <div class="icon-text">
                 <svg
                   height="27px"
@@ -158,7 +158,7 @@
             </div>
 
             <!-- 3rd detail: visibility -->
-            <div class="d-h-item-1 visibility">
+            <!-- <div class="d-h-item-1 visibility">
               <div class="icon-text">
                 <svg
                   height="27px"
@@ -173,10 +173,10 @@
               <div class="visibility-value">
                 <p class="d-value">12 km</p>
               </div>
-            </div>
+            </div> -->
 
             <!-- 4th detail: chance of rain -->
-            <div class="d-h-item-1 rain">
+            <!-- <div class="d-h-item-1 rain">
               <div class="icon-text">
                 <svg
                   height="28px"
@@ -191,10 +191,10 @@
               <div class="rain-value">
                 <p class="d-value">0%</p>
               </div>
-            </div>
+            </div> -->
 
             <!-- 5th detail: UV index -->
-            <div class="d-h-item-1 uv">
+            <!-- <div class="d-h-item-1 uv">
               <div class="icon-text">
                 <svg
                   height="28px"
@@ -209,10 +209,10 @@
               <div class="uv-value">
                 <p class="d-value">3</p>
               </div>
-            </div>
+            </div> -->
 
             <!-- 6th detail: sunset -->
-            <div class="d-h-item-1 sunset">
+            <!-- <div class="d-h-item-1 sunset">
               <div class="icon-text">
                 <svg
                   height="28px"
@@ -227,7 +227,7 @@
               <div class="sunset-value">
                 <p class="d-value">20:58</p>
               </div>
-            </div>
+            </div>  -->
           </div>
         </div>
         <!-- end of weather details section -->
@@ -241,7 +241,7 @@
           </div>
           <ul class="s-d-list">
             <!-- 1st day -->
-            <li class="s-d-item">
+            <!-- <li class="s-d-item">
               <p class="regular-light-text weekday">Today</p>
               <div class="s-d-icon-condition">
                 <div class="img-container">
@@ -255,7 +255,7 @@
               </div>
             </li>
             <!-- 2nd day -->
-            <li class="s-d-item">
+            <!-- <li class="s-d-item">
               <p class="regular-light-text weekday">Tue</p>
               <div class="s-d-icon-condition">
                 <div class="img-container">
@@ -269,7 +269,7 @@
               </div>
             </li>
             <!-- 3rd day -->
-            <li class="s-d-item">
+            <!-- <li class="s-d-item">
               <p class="regular-light-text weekday">Wed</p>
               <div class="s-d-icon-condition">
                 <div class="img-container">
@@ -283,7 +283,7 @@
               </div>
             </li>
             <!-- 4th day -->
-            <li class="s-d-item">
+            <!-- <li class="s-d-item">
               <p class="regular-light-text weekday">Thu</p>
               <div class="s-d-icon-condition">
                 <div class="img-container">
@@ -295,9 +295,9 @@
                 <p class="bold-light-text">37</p>
                 <div class="regular-light-text">/21</div>
               </div>
-            </li>
+            </li> -->
             <!-- 5th day -->
-            <li class="s-d-item">
+            <!-- <li class="s-d-item">
               <p class="regular-light-text weekday">Fri</p>
               <div class="s-d-icon-condition">
                 <div class="img-container">
@@ -309,9 +309,9 @@
                 <p class="bold-light-text">37</p>
                 <div class="regular-light-text">/21</div>
               </div>
-            </li>
+            </li> -->
             <!-- 6th day -->
-            <li class="s-d-item">
+            <!-- <li class="s-d-item">
               <p class="regular-light-text weekday">Sat</p>
               <div class="s-d-icon-condition">
                 <div class="img-container">
@@ -323,9 +323,9 @@
                 <p class="bold-light-text">37</p>
                 <div class="regular-light-text">/21</div>
               </div>
-            </li>
+            </li> -->
             <!-- 7th day -->
-            <li class="s-d-item">
+            <!-- <li class="s-d-item">
               <p class="regular-light-text weekday">Sun</p>
               <div class="s-d-icon-condition">
                 <div class="img-container">
@@ -337,7 +337,7 @@
                 <p class="bold-light-text">37</p>
                 <div class="regular-light-text">/22</div>
               </div>
-            </li>
+            </li>  -->
           </ul>
         </div>
       </div>
