Integrated API into hourly container

--- a/index.html
+++ b/index.html
@@ -79,35 +79,35 @@
         <div class="hourly-forecast">
           <p class="hourly-text">TODAY'S FORECAST</p>
           <div class="hourly-content">
-            <ul>
+            <ul class="hourly-list">
               <!-- <li class="h-item">
                 <div class="h-time">6:00 AM</div>
-                <img src="icons/35.png" alt="" />
+                <img src="img/weather-imgs/sun/sunny.png" alt="" />
                 <div class="h-temp">25°</div>
               </li>
               <li class="h-item">
                 <div class="h-time">9:00 AM</div>
-                <img src="icons/27.png" alt="" />
+                <img src="img/weather-imgs/sun/cloudy-sun.png" alt="" />
                 <div class="h-temp">28°</div>
               </li>
               <li class="h-item">
                 <div class="h-time">12:00 PM</div>
-                <img src="icons/26.png" alt="" id="not-fit" />
+                <img src="img/weather-imgs/sun/cloudy-sun.png" alt="" id="not-fit" />
                 <div class="h-temp">33°</div>
               </li>
               <li class="h-item">
                 <div class="h-time">3:00 PM</div>
-                <img src="icons/26.png" alt="" id="not-fit" />
+                <img src="img/weather-imgs/sun/cloudy-sun.png" alt="" id="not-fit" />
                 <div class="h-temp">34°</div>
               </li>
               <li class="h-item">
                 <div class="h-time">6:00 PM</div>
-                <img src="icons/26.png" alt="" id="not-fit" />
+                <img src="img/weather-imgs/sun/cloudy-sun.png" alt="" id="not-fit" />
                 <div class="h-temp">32°</div>
               </li>
               <li class="h-item">
                 <div class="h-time">9:00 PM</div>
-                <img src="icons/27.png" alt="" />
+                <img src="img/weather-imgs/sun/cloudy-sun.png" alt="" />
                 <div class="h-temp">30°</div>
               </li> -->
             </ul>
