Implemented error handling for search

--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
       <!-- End of NAV section -->
 
       <div class="content">
-        <form action="">
+        <form action="" class="search_form">
           <div class="search">
             <input
+              class="search__field"
               type="text"
               name="city"
               id=""
@@ -95,104 +96,7 @@
             <p class="hourly-text">7-DAY FORECAST</p>
           </div>
           <ul class="s-d-list">
-            <!-- 1st day -->
-            <!-- <li class="s-d-item">
-              <p class="regular-light-text weekday">Today</p>
-              <div class="s-d-icon-condition">
-                <div class="img-container">
-                  <img src="icons/26.png" alt="" id="special-margin" />
-                </div>
-                <p class="bold-light-text bold-container">Sunny</p>
-              </div>
-              <div class="s-d-smallest-highest">
-                <p class="bold-light-text">36</p>
-                <div class="regular-light-text">/22</div>
-              </div>
-            </li>
-            <!-- 2nd day -->
-            <!-- <li class="s-d-item">
-              <p class="regular-light-text weekday">Tue</p>
-              <div class="s-d-icon-condition">
-                <div class="img-container">
-                  <img src="icons/26.png" alt="" id="special-margin" />
-                </div>
-                <p class="bold-light-text bold-container">Sunny</p>
-              </div>
-              <div class="s-d-smallest-highest">
-                <p class="bold-light-text">37</p>
-                <div class="regular-light-text">/21</div>
-              </div>
-            </li>
-            <!-- 3rd day -->
-            <!-- <li class="s-d-item">
-              <p class="regular-light-text weekday">Wed</p>
-              <div class="s-d-icon-condition">
-                <div class="img-container">
-                  <img src="icons/26.png" alt="" id="special-margin" />
-                </div>
-                <p class="bold-light-text bold-container">Sunny</p>
-              </div>
-              <div class="s-d-smallest-highest">
-                <p class="bold-light-text">37</p>
-                <div class="regular-light-text">/21</div>
-              </div>
-            </li>
-            <!-- 4th day -->
-            <!-- <li class="s-d-item">
-              <p class="regular-light-text weekday">Thu</p>
-              <div class="s-d-icon-condition">
-                <div class="img-container">
-                  <img src="icons/35.png" alt="" />
-                </div>
-                <p class="bold-light-text bold-container">Cloudy</p>
-              </div>
-              <div class="s-d-smallest-highest">
-                <p class="bold-light-text">37</p>
-                <div class="regular-light-text">/21</div>
-              </div>
-            </li> -->
-            <!-- 5th day -->
-            <!-- <li class="s-d-item">
-              <p class="regular-light-text weekday">Fri</p>
-              <div class="s-d-icon-condition">
-                <div class="img-container">
-                  <img src="icons/35.png" alt="" />
-                </div>
-                <p class="bold-light-text bold-container">Cloudy</p>
-              </div>
-              <div class="s-d-smallest-highest">
-                <p class="bold-light-text">37</p>
-                <div class="regular-light-text">/21</div>
-              </div>
-            </li> -->
-            <!-- 6th day -->
-            <!-- <li class="s-d-item">
-              <p class="regular-light-text weekday">Sat</p>
-              <div class="s-d-icon-condition">
-                <div class="img-container">
-                  <img src="icons/7.png" alt="" />
-                </div>
-                <p class="bold-light-text bold-container">Rainy</p>
-              </div>
-              <div class="s-d-smallest-highest">
-                <p class="bold-light-text">37</p>
-                <div class="regular-light-text">/21</div>
-              </div>
-            </li> -->
-            <!-- 7th day -->
-            <!-- <li class="s-d-item">
-              <p class="regular-light-text weekday">Sun</p>
-              <div class="s-d-icon-condition">
-                <div class="img-container">
-                  <img src="icons/26.png" alt="" id="special-margin" />
-                </div>
-                <p class="bold-light-text bold-container">Sunny</p>
-              </div>
-              <div class="s-d-smallest-highest">
-                <p class="bold-light-text">37</p>
-                <div class="regular-light-text">/22</div>
-              </div>
-            </li>  -->
+
           </ul>
         </div>
       </div>
