Settings in the UI

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
           </div>
         </div>
         <!-- end of weather details section -->
+
+        <!-- setting option -->
+        
       </div>
       <!-- start of seven day forecast section -->
       <div class="seven-day">
