Completed cities section

--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@
           </div>
         </div>
         <!-- end of weather details section -->
+
+        <!-- disabled cities container -->
+        <div class="cities-wrapper disable">
+          <div class="cities-container">
+          </div>
+          <div class="pagination">
+            <button data-go-to="undefined" class="btn-page">Page 2</button>
+            <span class="current-page">Page 3/4</span>
+            <button data-go-to="undefined" class="btn-page">Page 4</button>
+          </div>
+        </div>
       </div>
       <!-- start of seven day forecast section -->
       <div class="seven-day">
@@ -99,7 +110,10 @@
 
           </ul>
         </div>
+        <div class="preview disable"></div>
       </div>
+
+      
       <!-- end of seven day forecast section -->
     </div>
   </body>
