Implemented pagination and DOM updating algorithm in cities section

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
           <div class="cities-container">
           </div>
           <div class="pagination">
-            <button data-go-to="undefined" class="btn-page">Page 2</button>
+            <!-- <button data-go-to="undefined" class="btn-page">Page 2</button>
             <span class="current-page">Page 3/4</span>
-            <button data-go-to="undefined" class="btn-page">Page 4</button>
+            <button data-go-to="undefined" class="btn-page">Page 4</button> -->
           </div>
         </div>
       </div>
