Implemented details section

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
         <!-- 3rd item: map -->
         <div class="n-item-3">
-          <svg viewBox="0 0 576 512">
-            <use href="img/svg/nav.svg#map"></use>
+          <svg viewBox="10 11 41 41">
+            <use href="img/svg/nav.svg#details"></use>
           </svg>
-          <p class="nav-text">Map</p>
+          <p class="nav-text">Details</p>
         </div>
 
         <!-- 4th item: settings -->
@@ -97,6 +97,10 @@
             <span class="current-page">Page 3/4</span>
             <button data-go-to="undefined" class="btn-page">Page 4</button> -->
           </div>
+        </div>
+
+        <div class="details-section-wrapper disable">
+
         </div>
       </div>
       <!-- start of seven day forecast section -->
