Added a button in landing details with its corresponding behaviour

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="weather-details">
           <div class="d-text-btn">
             <p class="hourly-text">AIR CONDITIONS</p>
-            
+            <button class="see-more">See more</button>
           </div>
           <div class="d-details">
           </div>
@@ -93,9 +93,6 @@
           <div class="cities-container">
           </div>
           <div class="pagination">
-            <!-- <button data-go-to="undefined" class="btn-page">Page 2</button>
-            <span class="current-page">Page 3/4</span>
-            <button data-go-to="undefined" class="btn-page">Page 4</button> -->
           </div>
         </div>
 
